--- a/admin/css/ada-aba-admin.css
+++ b/admin/css/ada-aba-admin.css
@@ -15,3 +15,8 @@
   display: grid;
   grid-template-columns: auto 1fr;
  }
+
+ #ada-aba-execute-query-form textarea {
+  font-family: monospace;
+  resize: both;
+ }
