add support for custom other label and require a value if picked

--- a/public/css/ada-aba-public.css
+++ b/public/css/ada-aba-public.css
@@ -82,6 +82,10 @@
   padding: 0.5em;
 }
 
+.ada-aba-survey-survey-option-other label {
+  white-space: nowrap;
+}
+
 .ada-aba-survey-error {
   color: red;
   font-style: italic;
