adjust style and layout for live site

--- a/public/css/ada-aba-public.css
+++ b/public/css/ada-aba-public.css
@@ -79,6 +79,7 @@
 .ada-aba-survey-survey-option-other {
   display: flex;
   align-self: center;
+  align-items: center;
 }
 
 .ada-aba-survey-survey-option-other input,
