update style and layout for live site

--- a/public/css/ada-aba-public.css
+++ b/public/css/ada-aba-public.css
@@ -120,6 +120,7 @@
 .ada-aba-checkbox {
   line-height: 1em;;
   font-size: 1.5em;
+  font-weight: bold;
 }
 
 .ada-aba-learner-id-table td:first-child {
