update with feedback from text review

--- a/public/css/ada-aba-public.css
+++ b/public/css/ada-aba-public.css
@@ -3,7 +3,13 @@
  * included in this file.
  */
 
- /* survey */
+/* forms */
+.ada-aba-form-inputs {
+  max-width: 800px;
+  margin: 0px auto;
+}
+
+/* survey */
 
 .ada-aba-survey-survey-question {
   margin-bottom: 1.5em;
