--- a/public/css/ada-aba-public.css
+++ b/public/css/ada-aba-public.css
@@ -5,7 +5,7 @@
 
 /* forms */
 .ada-aba-form-inputs {
-  max-width: 800px;
+  max-width: 700px;
   margin: 0px auto;
 }
 
@@ -137,4 +137,10 @@
 p.ada-aba-progress-fit-for-purpose {
   font-style: italic;
   font-size: 10pt;
+}
+
+p.ada-aba-progress-midway {
+  font-style: italic;
+  font-size: 10pt;
+  color: #e71757;  /* ada fuchsia */
 }
