--- a/public/css/ada-aba-public.css
+++ b/public/css/ada-aba-public.css
@@ -5,7 +5,7 @@
 
 /* forms */
 .ada-aba-form-inputs {
-  max-width: 700px;
+  max-width: 800px;
   margin: 0px auto;
 }
 
@@ -143,4 +143,9 @@ p.ada-aba-progress-midway {
   font-style: italic;
   font-size: 10pt;
   color: #e71757;  /* ada fuchsia */
+}
+
+.ada-aba-progress-table {
+  max-width: 800px;
+  margin: 0px auto;
 }
